2004-01-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.0.2
	
	* lily/mark-engraver.cc (process_music): backport of mark \default
	fix.

	* lily/tie-engraver.cc (acknowledge_grob): backport tie/accidental
	bugfix: make ties only for note heads with the same pitch.
	

2003-12-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/README.in (Suggested): Add gv, remove native windows
	gview (Volker Zell).

2003-10-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lyric-combine-music-iterator.cc
	(Lyric_combine_music_iterator): change init order, to prevent GC
	segfaults.

	* lily/context-specced-music-iterator.cc (construct_children): 
	only change  translator if found. This fixes a core dump problem.

2003-10-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/install-info-html.sh: Use Bash.

	* cygwin/mknetrel: Patch from Bert.

2003-09-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/lily-wins.py: Check whether to run ly2dvi or lilypond.

	* stepmake/stepmake/topdocs-targets.make (copy-to-top): Do not
	try to copy *png, index.html (Bertalan Fodor).

	* Documentation/user/GNUmakefile: Remove bashism (Bertalan Fodor).

	* cygwin/mknetrel (preinstall): Set webdir (Bertalan Fodor).

2003-09-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/postinstall-lilypond.sh: 
	* cygwin/postremove-lilypond.sh: Bugfix for fonts remove command
	(Volker Zell).

2003-09-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond.py (run_dvips): use -Ppdf for preview.

	* VERSION: release 2.0.1

	* lily/bezier.cc (get_other_coordinate): change assert into
	warning.

	* lily/note-head.cc (internal_brew_molecule): make left protusion
	smaller, to accomodate for natural sign.
	(internal_brew_molecule): only do this when the accidental is
	close enough.
	(extent): new function

	* lily/skyline.cc (merge_skyline): new function
	(heighten_skyline): new function

	* lily/accidental-placement.cc (position_accidentals) 
	(position_accidentals): fix todo.
