@@ -1,3 +1,7 @@
+2004-01-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/mark-engraver.cc (process_music): fix typechecking bug.
+
 2004-01-07  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* VERSION (PATCH_LEVEL): release 2.0.2
